FIX: tempo de jump e pausa de moedas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,6 +56,7 @@
     right: 130px;
     top: 10px;
     width: 40px;
+    z-index: 2;
 }
 
 .score,
@@ -66,6 +67,7 @@
     font: bold 35px Arial, sans-serif;
     color: #fff;
     text-shadow: 1px 1px 2px #000, -1px -1px 2px #000, -1px 1px 2px #000, 1px -1px 2px #000;
+    z-index: 2;
 }
 
 .max-score {
@@ -79,6 +81,7 @@
     box-shadow: 5px 5px 5px #000, -5px -5px 5px #000, -5px 5px 5px #000, 5px -5px 5px #000;
     border-radius: 5px;
     cursor: pointer;
+    z-index: 2;
 }
 .max-score:active {
     box-shadow: none;
